# G4Vox

./: .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  ReadMe.md  build.ps1
.VSCodeCounter/2026-03-26_16-05-51/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
cmake/: G4VoxConfig.cmake.in  G4VoxVersion.hh.in
include/G4Vox/: HDF5Writer.hh  Quantities.hh  TOMLManager.hh  VVoxQuantity.hh  VVoxQuantityAccumulable.hh  VVoxQuantityScorer.hh  VoxGeometry.hh  VoxQuantityManager.hh  VoxQuantityMessenger.hh  VoxSD.hh  VoxStepFilter.hh  VoxUtils.hh
include/G4Vox/Quantities/: Dose.hh  EnergyDep.hh  Ionizations.hh  LET.hh  NumDelta.hh  QuantityDose.hh  QuantityEnergyDep.hh  QuantityIonizations.hh  QuantityLET.hh  QuantityNumDelta.hh  QuantityTrackLength.hh  TrackLength.hh
src/: HDF5Writer.cc  TOMLManager.cc  VVoxQuantity.cc  VVoxQuantityScorer.cc  VoxGeometry.cc  VoxQuantityManager.cc  VoxQuantityMessenger.cc  VoxSD.cc  VoxUtils.cc
src/Quantities/: Dose.cc  EnergyDep.cc  Ionizations.cc  LET.cc  NumDelta.cc  QuantityDose.cc  QuantityEnergyDep.cc  QuantityIonizations.cc  QuantityLET.cc  QuantityNumDelta.cc  QuantityTrackLength.cc  TrackLength.cc
